# eco-routes-svm

./: .gitignore  .releaserc.json  AGENTS.md  Anchor.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md
integration-tests/: Cargo.toml
integration-tests/programs/mock-igp/: Cargo.toml
integration-tests/programs/mock-igp/src/: lib.rs
integration-tests/tests/: append_flash_fulfill_intent_chunk.rs  append_flash_fulfill_route_chunk.rs  chunked_buffer.rs  close_flash_fulfill_intent.rs  close_proof_hyper_prover.rs  close_proof_local_prover.rs  flash_fulfill.rs  flash_fulfill_oom_repro.rs  fulfill.rs  fund.rs  handle.rs  init_hyper_prover.rs  pay_for_gas.rs  prove.rs  prove_hyper_prover.rs  prove_local_prover.rs  publish.rs  publish_and_fund.rs  refund.rs  set_flash_fulfill_intent.rs  svm_to_svm_e2e.rs  withdraw.rs
integration-tests/tests/common/: compact_portal_context.rs  flash_fulfiller_context.rs  hyper_prover_context.rs  hyper_prover_helpers.rs  hyperlane.rs  hyperlane_context.rs  local_prover_context.rs  mod.rs  portal_context.rs  portal_helpers.rs  proof_helper_context.rs
programs/compact-portal/: Cargo.toml
programs/compact-portal/src/: lib.rs
programs/compact-portal/src/instructions/: mod.rs  publish_and_fund.rs
programs/dummy-ism/: Cargo.toml
programs/dummy-ism/src/: lib.rs
programs/eco-routes/: Cargo.toml
programs/eco-routes/src/: encoding.rs  encoding_two.rs  error.rs  events.rs  hyperlane.rs  lib.rs  state.rs
programs/eco-routes/src/instructions/: claim_intent_native.rs  claim_intent_spl.rs  close_intent.rs  dispatch_intent.rs  fulfill_intent.rs  fund_intent_native.rs  fund_intent_spl.rs  handle.rs  handle_account_metas.rs  handle_blueprint.rs  handle_fulfilled_ack.rs  initialize_eco_routes.rs  initialize_intent.rs  ism.rs  ism_account_metas.rs  mod.rs  publish_intent.rs  refund_intent_native.rs  refund_intent_spl.rs  set_authority.rs  set_authorized_prover.rs  set_domain_registry.rs
programs/eco-routes/src/testdata/: intent_fulfillment_marker_pda_should_derive_consistent_address.golden  intent_pda_should_derive_consistent_address.golden  svm_matches_evm_intent_hash.golden
programs/eco-routes/tests/: fund_intent_native.rs  fund_intent_spl.rs  publish_intent.rs  refund_intent_native.rs  refund_intent_spl.rs
programs/eco-routes/tests/common/: mod.rs
programs/flash-fulfiller/: Cargo.toml
programs/flash-fulfiller/src/: events.rs  lib.rs  state.rs
programs/flash-fulfiller/src/cpi/: fulfill.rs  mod.rs  withdraw.rs
programs/flash-fulfiller/src/instructions/: append_flash_fulfill_intent_chunk.rs  append_flash_fulfill_route_chunk.rs  cancel_flash_fulfill_intent.rs  close_abandoned_flash_fulfill_intent.rs  close_flash_fulfill_intent.rs  flash_fulfill.rs  init_flash_fulfill_intent.rs  mod.rs  set_flash_fulfill_intent.rs
programs/flash-fulfiller/src/testdata/: flash_fulfill_intent_pda_deterministic.golden  flash_vault_pda_deterministic.golden
programs/hyper-prover/: Cargo.toml
programs/hyper-prover/src/: events.rs  hyperlane.rs  lib.rs  state.rs  utils.rs
programs/hyper-prover/src/instructions/: close_proof.rs  handle.rs  handle_account_metas.rs  init.rs  ism.rs  ism_account_metas.rs  mod.rs  prove.rs
programs/hyper-prover/src/testdata/: claimant_and_intent_hash_success.golden  config_pda_deterministic.golden  dispatcher_pda_deterministic.golden  pda_payer_pda_deterministic.golden  process_authority_pda_deterministic.golden
programs/local-prover/: Cargo.toml
programs/local-prover/src/: lib.rs  state.rs
programs/local-prover/src/instructions/: close_proof.rs  mod.rs  prove.rs
programs/portal/: Cargo.toml
programs/portal/src/: events.rs  keccak_writer.rs  lib.rs  state.rs  types.rs
programs/portal/src/instructions/: fulfill.rs  fund.rs  fund_context.rs  mod.rs  prove.rs  publish.rs  refund.rs  withdraw.rs
programs/portal/src/testdata/: calldata_with_accounts_success.golden  dispatcher_pda_deterministic.golden  executor_pda_deterministic.golden  fulfill_marker_pda_deterministic.golden  intent_hash_deterministic.golden  proof_closer_pda_deterministic.golden  reward_token_amounts.golden  route_hash_deterministic.golden  route_token_amounts_deterministic.golden  token_transfer_accounts_token_program_id.golden  token_transfer_accounts_token_program_id_2022.golden  vault_pda.golden  vault_pda_deterministic.golden  withdrawn_marker_pda_deterministic.golden
programs/portal/tests/: fulfill.rs  fund.rs  publish.rs  refund.rs  withdraw.rs
programs/portal/tests/common/: mod.rs
programs/proof-helper/: Cargo.toml
programs/proof-helper/src/: igp.rs  lib.rs
programs/proof-helper/src/instructions/: mod.rs  pay_for_gas.rs
programs/proof-helper/src/testdata/: igp_program_id_is_deterministic.golden  keccak_hash_known_value.golden  mailbox_id_is_deterministic.golden
tests/: Cargo.toml
tests/rust/: Cargo.toml
tests/rust/src/: helpers.rs  main.rs  svm_to_svm_e2e.rs  utils.rs
tests/src/: claim_intent.rs  common.rs  create_intent.rs  fund_intent.rs  helpers.rs  lib.rs  multisig_ism_stub.rs  refund_intent.rs  svm_to_svm_e2e.rs  utils.rs
tests/ts/: .env.example  bNSahQ73kPZhvbDAh4dQwJy7Nap1Hst5Hx5WzD5ffbc.json  constants.ts  evm-to-svm.e2e.ts  evmUtils.ts  hardhat.config.ts  package-lock.json  package.json  svm-to-evm.e2e.ts  tsconfig.json  types.ts  utils.ts
tests/ts/abis/: HyperProver.json  Inbox.json  IntentSource.json  TestERC20.json
tests/ts/evm-contracts/: Eco7683DestinationSettler.sol  Inbox.sol  IntentSource.sol  MessageBridgeProver.sol  TestERC20.sol  TestProver.sol  Vault.sol
tests/ts/evm-contracts/interfaces/: IBaseSource.sol  IDestinationSettler.sol  IInbox.sol  IIntentSource.sol  IMessageBridgeProver.sol  IPermit.sol  IProver.sol  ISemver.sol  IUniversalIntentSource.sol  IVault.sol  IVaultStorage.sol
tests/ts/evm-contracts/libs/: AddressConverter.sol  Semver.sol
tests/ts/evm-contracts/prover/: BaseProver.sol  HyperProver.sol
tests/ts/evm-contracts/source/: BaseSource.sol  EvmSource.sol  (+1 more)
tests/ts/scripts/: deployAndMintTestUsdc.ts  initializeEcoRoutes.ts  mintUsdc.ts  sendEth.ts  setAuthorizedProver.ts
(+18 files in other folders)
