[workspace]
members = ["packages/*", "programs/*", "tests"]
resolver = "2"

[workspace.dependencies]
eco-svm-std = { path = "packages/eco-svm-std" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
