[workspace]
members = ["integration-tests", "packages/*", "programs/*"]
resolver = "2"

[workspace.dependencies]
dummy-ism = { path = "programs/dummy-ism" }
eco-svm-std = { path = "packages/eco-svm-std" }
hyper-prover = { path = "programs/hyper-prover" }
portal = { path = "programs/portal" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
