[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
base64 = "0.22.1"
derive_more = { version = "2.0.1", features = ["deref_mut"] }
eco-svm-std = { workspace = true }
litesvm = "0.6.1"
portal = { workspace = true }
rand = "0.9.1"
solana-sdk = "2.2.1"
spl-noop = "1.0.0"
