[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-lang = "0.31.1"

anyhow = "1.0.98"
borsh = { version = "1.5.7", features = ["derive"] }
console = "0.15.11"

eco-routes = { version = "0.1.0", path = "../programs/eco-routes" }
indicatif = "0.17.11"
litesvm = "0.6.1"
rand = "0.9.1"
solana-compute-budget = "2.2.1"
solana-instruction = "2.2.1"
solana-keypair = "2.2.1"
solana-message = "2.2.1"

solana-sdk = "2.2.1"
solana-signer = "2.2.1"
solana-system-interface = "1.0.0"
solana-transaction = "2.2.1"
spl-associated-token-account = "6.0.0"
spl-token = "8.0.0"
spl-token-2022 = "8.0.1"
tiny-keccak = "2.0.2"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "ansi", "chrono"] }
