[package]
name = "eco-routes"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "eco_routes"

[features]
no-entrypoint = ["idl-build"]
no-idl = []
cpi = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
itertools = "0.14.0"
tiny-keccak = "2.0.2"
serde = "1.0.219"
hex = "0.4.3"
serde_json = "1.0.140"
ethabi = "18.0.0"
