[package]
name = "eco-routes"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "eco_routes"

[features]
no-entrypoint = ["idl-build"]
no-idl = []
cpi = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
ethabi = "18.0.0"
itertools = "0.14.0"
tiny-keccak = "2.0.2"

[dev-dependencies]
base64 = "0.22.1"
goldie = "0.5.0"
hex = "0.4.3"
litesvm = "0.6.1"
rand = "0.9.1"
serde_json = "1.0.140"
solana-sdk = "2.2.1"
