[package]
name = "flash-fulfiller"
version = "0.1.0"
description = "Flash-fulfillment orchestrator: withdraw reward + fulfill intent + pay claimant atomically."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_fulfiller"

[features]
mainnet = ["eco-svm-std/mainnet"]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["event-cpi"] }
anchor-spl = { workspace = true }
eco-svm-std = { workspace = true }
portal = { workspace = true, features = ["no-entrypoint"] }
spl-pod = "0.5.1"

[dev-dependencies]
goldie = { workspace = true }
