[package]
description = "Created with Anchor"
edition = "2021"
name = "hyper-prover"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "hyper_prover"

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
mainnet = ["eco-svm-std/mainnet", "portal/mainnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { workspace = true, features = ["event-cpi"] }
derive-new = { workspace = true }
eco-svm-std = { workspace = true }
portal = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
goldie = { workspace = true }
