[package]
name = "portal"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "portal"

[features]
mainnet = ["eco-svm-std/mainnet"]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = "0.31.1"
derive-new = { workspace = true }
eco-svm-std = { workspace = true }
itertools = "0.14.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[dev-dependencies]
goldie = { workspace = true }

