[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]

eco-routes = { version = "0.1.0", path = "../../programs/eco-routes" }

solana-sdk = "2.2.1"
solana-compute-budget = "2.2.1"

anyhow = "1.0.98"
borsh = { version = "1.5.7", features = ["derive"] }
spl-token = "8.0.0"
spl-associated-token-account = "6.0.0"
anchor-lang = "0.31.1"
solana-keypair = "2.2.1"
solana-transaction = "2.2.1"
solana-message = "2.2.1"
solana-instruction = "2.2.1"
solana-signer = "2.2.1"
solana-system-interface = "1.0.0"
rand = "0.9.1"
tiny-keccak = "2.0.2"
spl-token-2022 = "9.0.0"
litesvm = "0.6.1"
console = "0.15.11"
indicatif = "0.17.11"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = [
    "fmt",
    "env-filter",
    "ansi",
    "chrono",
] }
tracing-appender = "0.2.3"
itertools = "0.14.0"
tokio = "1.45.1"
hex = "0.4.3"
